# cargo-auto-bundle

./: Cargo.toml  LICENSE  README.md
src/: compile.rs  main.rs  traverse.rs
