[package]
name = "cargo-auto-bundle"
version = "0.1.1"
authors = ["shino16 <masatosinokawa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
itertools = "0.9"
structopt = "0.3"
cargo_toml = "0.8"
syn = { version = "1.0", features = ["full", "visit", "extra-traits"] }
quote = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
